FIX: Fixed stuck session properties in filter bar

--- a/app/assets/stylesheets/components/_hero.scss
+++ b/app/assets/stylesheets/components/_hero.scss
@@ -31,6 +31,7 @@
     }
     .left-hero {
       padding: 36% 12% 0 10%;
+      height: 104%;
       img {
         display: block;
         width: 100%;
@@ -39,6 +40,7 @@
     }
     .right-hero {
       padding: 0% 6% 0% 10%;
+      height: 100%;
     }
   }
 
